 kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
spec:
  selector:
    app: homework-web  # Должно совпадать с метками в deployment
  ports:
    - protocol: TCP
      port: 80         # Порт сервиса
      targetPort: 80   # Порт пода
  type: ClusterIP
